# time-attendent-sol

./: Cargo.toml  note.txt  package-lock.json  package.json  readme.md
src/: lib.rs
src/client/: main.ts
src/program/: Cargo.toml  readme.md
src/program/src/: lib.rs
