[package]
name = "time_attendent_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.5"

[dev-dependencies]
solana-program-test = "1.14.5"
solana-sdk = "1.14.5"

[lib]
crate-type = ["cdylib", "lib"]